--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static CMS</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@staticcms/app@^2.0.0-beta.6/dist/main.css">
+    <link rel="stylesheet" href="https://unpkg.com/@staticcms/app@2.0.0-beta.8/dist/main.css">
   </head>
   <body>
-    <script src="https://unpkg.com/@staticcms/app@^2.0.0-beta.6/dist/static-cms-app.js"></script>
+    <script src="https://unpkg.com/@staticcms/app@2.0.0-beta.8/dist/static-cms-app.js"></script>
     <script>
       window.CMS.init();
     </script>
